# VixenHealth

./: .gitignore  README.md  docker-compose.core-services.yaml  docker-compose.debug.yaml  docker-compose.yaml  example.env  nginx.conf
configs/grafana/: grafana.json
configs/nginx/: nginx.conf
configs/prometheus/: prometheus.yaml
containers/vixenhealth_id/: Dockerfile
containers/vixenhealth_id/app/: alembic.ini  main.py  settings.py
containers/vixenhealth_id/app/api/: __init__.py
containers/vixenhealth_id/app/api/v1/: __init__.py
containers/vixenhealth_id/app/api/v1/account/: account.py  scheme.py
containers/vixenhealth_id/app/api/v1/authentication/: authentication.py  responses.py  scheme.py  service.py  validators.py
containers/vixenhealth_id/app/config/: settings.py
containers/vixenhealth_id/app/deployment/: pyproject.toml  seeder.yaml
containers/vixenhealth_id/app/deployment/migrations/: env.py
containers/vixenhealth_id/app/deployment/migrations/versions/: 08204492bdb6_.py  0ae56ab3fe9d_.py  2d170b93d249_.py  9b8acdbdb89d_.py  b1c297ebf06f_.py  cc2d0af31c33_.py  d5c570b6c654_.py
containers/vixenhealth_id/app/routers/: __init__.py
containers/vixenhealth_id/app/routers/authentication/: responses.py
containers/vixenhealth_id/app/storages/cdn/: cdn.py
containers/vixenhealth_id/app/storages/database/: database.py
containers/vixenhealth_id/app/utils/: exceptions.py  jwt_utils.py  lifespan.py  schema.py  security_bearer.py  seeder.py
docs/: README.md  description.md  project_structure.md  technologies.md
(+12 files in other folders)
