[tool.poetry]
name = "vixenhealth-id"
version = "0.0.1"
description = "Сервис, отвечающий за авторизацию и аутентификацию пользователей"
authors = ["darklorianprime <kasimov.alexander.ul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
minio = "^7.2.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
